# trueman2

./: .dockerignore  Readme.md  docker-compose.yaml
api/: Cargo.toml  Dockerfile
api/src/: decimal_utils.rs  jwt.rs  main.rs  redis_manager.rs  registry.rs
api/src/routes/: auth.rs  balance.rs  balance1.rs  market.rs  mod.rs  order.rs  simulator.rs  test.rs  token.rs  trade.rs
client/: middleware.ts  next.config.ts  package.json  pnpm-lock.yaml
client/app/: globals.css  icon.tsx  layout.tsx  page.tsx
client/app/(dashboard)/: layout.tsx
client/app/(dashboard)/exchange/: loading.tsx  page.tsx
client/app/(dashboard)/trade/[pair]/: page.tsx
client/app/admin/login/: page.tsx
client/app/exchange/: page.tsx
client/app/exchange2/: page.tsx
client/app/login/: page.tsx
client/app/signup/: loading.tsx  page.tsx
client/app/trade2/[pair]/: page.tsx
client/components/exchange/: DepositDialog.tsx  HeroCarousel.tsx  Markets.tsx  Navbar.tsx  SearchDialog.tsx  Wallet.tsx  WithdrawDialog.tsx
client/components/trade/: BookTrades.tsx  OrderForm.tsx  OrderHistory.tsx  RecentTrades.tsx  StartSimButton.tsx  Ticker.tsx  TradingViewChart.tsx
client/components/ui/: menubar.tsx  select.tsx
client/lib/: auth.ts  http.ts  units.ts  wsClient.ts
client/store/: auth.ts  balances.ts  marketFeed.ts  markets.ts  order.ts  simulator.ts  tokens.ts  trade.ts
database/: Cargo.toml  diesel.toml
database/migrations/2025-08-02-131933_create_users/: down.sql  up.sql
database/migrations/2025-08-04-034036_create_orders_trades/: down.sql  up.sql
database/migrations/2025-08-04-042545_create_balances/: down.sql  up.sql
database/migrations/2025-08-08-140938_add_user_ids_to_trades/: down.sql  up.sql
database/migrations/2025-08-08-172209_enforce_not_null_user_ids_on_trades/: down.sql  up.sql
database/migrations/2025-08-20-123059_drop_locked_amount_constraint/: down.sql  up.sql
database/src/: lib.rs  model.rs  schema.rs
db-updater/: Cargo.toml  Dockerfile
db-updater/src/: main.rs
engine/: Cargo.toml  Dockerfile
engine/src/: decimal_utils.rs  main.rs  order_processor.rs  redis_manager.rs  trading_engine.rs
simulator/: Cargo.toml  Dockerfile
simulator/src/: main.rs
ws/: Cargo.toml  Dockerfile
ws/src/: main.rs  redis_manager.rs  types.rs  user_manager.rs
