[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
actix-web-httpauth = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.11.0"
uuid = { version = "1.13.0", features = ["v4"] } 
tokio = { version = "1.47.1", features = ["full"] }
chrono = { version = "0.4.41", features = ["serde"] }

database = { path = "../database" }
diesel = "2.2.12"
jsonwebtoken = "9.3.1"

