[package]
name = "database"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
diesel = { version = "2.2.0", features = ["postgres", "uuid", "chrono"] }
dotenvy = "0.15"
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.13.0", features = ["v4", "serde"] }
