[package]
name = "simulator"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.2"
reqwest = { version = "0.12.22", features = ["json", "gzip"] }
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
uuid = { version = "1", features = ["v4", "serde"] }
redis = { version = "0.24", features = ["tokio-comp"] }
anyhow = "1"